# Automated-Theorem-Prover

./: .gitmodules  pyproject.toml
maths_ai/core/: config.py
maths_ai/data_models/: proof_components.py
maths_ai/dts_state/: thompson_sampler_state.json
maths_ai/gnn_inference/: inference_engine.py  model.py
maths_ai/gnn_inference/atp_lean_gnn/: analysis.py  argument_training.py  audit.py  cli.py  graph.py  inference.py  labels.py
maths_ai/gnn_inference/scripts/: analyze_run.py  audit_parser.py  build_lemma_corpus.py  build_lemma_index.py  compare_runs.py  evaluate_baseline.py  extract_lemma_corpus_from_hf.py  prepare_dataset.py  run_inference.py  train_baseline.py  train_scorer.py
maths_ai/gnn_inference/tests/: test_argument_selector.py  test_dataset_preparation.py  test_graph_pipeline.py  test_inference.py  test_lemma_corpus.py  test_lemma_index.py  test_logger.py  test_parser_audit.py  test_premise_pool.py  test_premise_scoring.py  test_run_analysis.py  test_training_pipeline.py
maths_ai/hybrid_reasoner/: __init__.py  hypergraph.py  joint_inference.py
maths_ai/pln_inference/: model.py
maths_ai/pln_inference/metta/axioms/: import-pettachainer.metta  use-module!.qlf
maths_ai/pln_inference/metta/scripts/: metamaths_parser.py  run_tests.py
maths_ai/pln_inference/metta/tests/: conftest.py  test_thompson_sampler.py  use-module!.pl  use-module!.qlf
maths_ai/pln_inference/metta/translator/: input_json_test.json  input_json_test2.json  readme.md  test_imports.py  translator.py
scripts/: run_proover.sh
(+17 files in other folders)
