[project]
name = "mathematics-ai-atp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pantograph",
    "torch>=2.12.0",
    "torch-geometric>=2.7.0",
]

[tool.uv.sources]
pantograph = { git = "https://github.com/stanford-centaur/PyPantograph" }

[dependency-groups]
dev = ["pytest>=9.0.3"]
