[project]
name = "mathematics-ai-atp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.14.2",
    "graphviz>=0.21",
    "pantograph",
    "pydantic>=2.13.4",
    "pytest>=9.0.3",
    "torch>=2.12.0",
    "torch-geometric>=2.7.0",
]


[tool.uv.sources]
pantograph = { git = "https://github.com/stanford-centaur/PyPantograph" }

[tool.setuptools.packages.find]
where=["."]
include=["maths_ai", "maths_ai.*"]
exclude=["data", "experiments", "tests", "tests.*"]


[dependency-groups]
dev = ["pytest>=9.0.3"]
